[package]
name = "distance-db-populator"
version = "0.1.0"
authors = ["Brian Bowman <seeker14491@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.25"
chrono = "0.4.9"
color-backtrace = "0.3.0"
distance-util = { git = "https://github.com/Seeker14491/distance-util.git", tag = "v0.1.0"}
dotenv = "0.15.0"
futures = "0.3.1"
indicatif = "0.13.0"
num-traits = "0.2.8"
steamworks = { git = "https://github.com/Seeker14491/steamworks-rs.git", tag = "v0.0.14" }
tokio = { version = "0.2.6", features = ["macros"] }
tokio-postgres = { version = "0.5.0-alpha.2", features = ["with-chrono-0_4"] }
