[package]
name = "distance-db-populator"
version = "0.1.0"
authors = ["Brian Bowman <seeker14491@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
az = "1"
color-backtrace = "0.6"
distance-steam-data-client = { git = "https://github.com/Seeker14491/DistanceSteamDataServer.git" }
distance-util = { git = "https://github.com/Seeker14491/distance-util.git", tag = "v0.3.0" }
dotenv = "0.15"
futures = "0.3"
indicatif = "0.17"
itertools = "0.13"
num-traits = "0.2"
reqwest = { version = "0.12", default-features = false, features = [
  "gzip",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
steam-workshop = { git = "https://github.com/Seeker14491/steam-workshop.git" }
tap = "1"
tokio = { version = "1", features = ["macros", "rt"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
tracing = "0.1"
tracing-subscriber = "0.3"
